fix: fix z-index on search bar

--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -2,6 +2,7 @@
 
 .search {
   position: relative;
+  z-index: 2;
 
   &__input {
     border: 1px solid $border;
